--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .button {
     display: inline-block;
     text-decoration: none;
-    background: linear-gradient(red, yellow);
+    background: linear-gradient(45deg, red, yellow);
     padding: 15px;
     border: 3px solid blue;
     border-radius: 10px;
@@ -61,16 +61,16 @@ div strong {
     padding: 40px 20px;
     margin: 10px;
     margin-top: 50px;
-    background-color: lightgrey;
+    background-color: beige;
     display: inline-block;
     font-size: 25px;
     border-radius: 5px;
-    border: 3px solid lightgrey;
+    border: 3px solid beige;
 }
 
 .different {
     border: 3px solid tomato;
-    background-color: lightgray;
+    background-color: seashell;
     padding: 40px 20px;
     border-radius: 5px;
     font-size: 25px;
@@ -84,4 +84,38 @@ div strong {
     margin: 20px auto;
     padding-bottom: 20px;
     border-bottom: 2px solid gray;
+}
+
+.all-cards {
+    width: 80%;
+    margin: 0px auto;
+}
+
+.cards {
+    margin: 20px;
+    display: flex;
+
+}
+
+.card {
+    width: 30%;
+    margin: 20px;
+    border-radius: 5px;
+}
+
+.card img {
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+.card-text h3 {
+    padding-left: 20px;
+    margin-top: 20px;
+}
+
+.card-text p {
+    padding: 20px;
+    margin-bottom: 40px;
+    font-size: 12px;
+    text-align: justify;
 }
