--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .first-section {
     width: 100%;
-    height: 400px;
+    height: 450px;
     background-image: url(images/donation6.jpg);
     background-repeat: no-repeat;
     background-size: cover;
@@ -99,7 +99,7 @@ div strong {
 
 .card {
     width: 30%;
-    margin: 20px;
+    margin: 10px;
     border-radius: 5px;
 }
 
@@ -118,4 +118,41 @@ div strong {
     margin-bottom: 40px;
     font-size: 12px;
     text-align: justify;
+}
+
+.depending-lives {
+    margin: 0px auto;
+    width: 100%;
+}
+
+.depends-card {
+    display: flex;
+    margin-top: 80px;
+}
+
+.depend-text-card {
+    width: 40%;
+    margin-left: 100px;
+}
+
+.depends-image-card img {
+    width: 90%;
+    margin-left: 5px;
+    height: 400px;
+}
+
+.depends-image-card {
+    width: 40%;
+}
+
+.contribute {
+    display: inline-block;
+    text-decoration: none;
+    background: linear-gradient(45deg, red, yellow);
+    padding: 15px;
+    border: 3px solid blue;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    margin-left: 30px;
 }
